--- a/enadzornik-ui/dashboard/nastavnik.html
+++ b/enadzornik-ui/dashboard/nastavnik.html
@@ -3,17 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <title>Nastavnik</title>
+  <style>
+    body {
+      display: none;
+      font-family: Arial;
+      margin: 20px;
+    }
+    .header {
+      background: #2ecc71;
+      color: white;
+      padding: 15px;
+      margin-bottom: 20px;
+    }
+    button {
+      background: #e74c3c;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      cursor: pointer;
+    }
+  </style>
+  <script>
+    (function() {
+      const token = localStorage.getItem('jwtToken');
+      if (!token) {
+        window.location.href = '../login.html';
+        return;
+      }
+
+      try {
+        const payload = JSON.parse(atob(token.split('.')[1]));
+        console.log('Token payload:', payload);
+
+        if (payload.role !== 'nastavnik') {
+          if (payload.role === 'admin') window.location.href = 'admin.html';
+          else if (payload.role === 'supervizor') window.location.href = 'supervizor.html';
+          else window.location.href = '../login.html';
+          return;
+        }
+
+        const displayName = payload.ime && payload.prezime
+                ? payload.ime + ' ' + payload.prezime
+                : payload.email || 'Nastavnik';
+
+        document.addEventListener('DOMContentLoaded', function() {
+          document.getElementById('ime').textContent = displayName;
+          document.body.style.display = 'block';
+        });
+
+      } catch (e) {
+        console.error('Greška pri parsiranju tokena:', e);
+        localStorage.removeItem('jwtToken');
+        window.location.href = '../login.html';
+      }
+    })();
+  </script>
 </head>
 <body>
-<h1>Prostor za nastavnike</h1>
-<p>Dobrodošli, <span id="imePrezime">...</span>!</p>
+<div class="header">
+  <h1>Nastavnik Panel</h1>
+  <p>Dobrodošli, <span id="ime"></span>!</p>
+</div>
+
+<h2>Funkcije:</h2>
 <ul>
-  <li><a href="#">Upload priprema za čas</a></li>
-  <li><a href="#">Upload mesečnih planova</a></li>
-  <li><a href="#">Upload video snimaka</a></li>
-  <li><a href="#">Moji materijali</a></li>
-  <li><a href="#" onclick="logout()">Odjavi se</a></li>
+  <li>Upload priprema</li>
+  <li>Upload planova</li>
+  <li>Moji materijali</li>
 </ul>
-<script src="../script.js"></script>
+
+<button onclick="logout()">Odjavi se</button>
+
+<script>
+  function logout() {
+    localStorage.removeItem('jwtToken');
+    window.location.href = '../login.html';
+  }
+
+  document.addEventListener('DOMContentLoaded', function() {
+    console.log('Nastavnik strana učítana');
+  });
+</script>
 </body>
 </html>
