--- a/enadzornik-ui/dashboard/nastavnik.html
+++ b/enadzornik-ui/dashboard/nastavnik.html
@@ -56,6 +56,17 @@
             border: 1px solid #ccc;
             padding: 10px;
             margin: 10px 0;
+            border-radius: 5px;
+        }
+
+        .status-na_cekanju {
+            border-left: 5px solid orange;
+        }
+        .status-potvrdjen {
+            border-left: 5px solid green;
+        }
+        .status-odbijen {
+            border-left: 5px solid red;
         }
     </style>
 </head>
@@ -87,7 +98,9 @@
 
 <!-- Lista materijala -->
 <h2>Moji materijali</h2>
-<div id="materijali"></div>
+<div id="materijali">
+    <p>Učitavanje...</p>
+</div>
 
 <!-- Logout dugme -->
 <button onclick="logout()">Odjavi se</button>
@@ -97,12 +110,13 @@
     document.getElementById('imePrezime').textContent =
         localStorage.getItem('korisnikImePrezime') || 'Nastavnik';
 
+    const KORISNIK_TOKEN = localStorage.getItem('jwtToken');
+
     // Upload fajla + metapodaci
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
         e.preventDefault();
         const msg = document.getElementById('uploadMessage');
-        const token = localStorage.getItem('jwtToken');
-        if (!token) {
+        if (!KORISNIK_TOKEN) {
             msg.textContent = 'Nisi ulogovan!';
             msg.className = 'error';
             return;
@@ -121,7 +135,7 @@
             formData.append('file', fajl);
             const fileRes = await fetch('http://localhost:8085/api/v1/files/upload', {
                 method: 'POST',
-                headers: {'Authorization': 'Bearer ' + token},
+                headers: {'Authorization': 'Bearer ' + KORISNIK_TOKEN},
                 body: formData
             });
             const fileData = await fileRes.json();
@@ -146,7 +160,7 @@
             const metaRes = await fetch('http://localhost:8084/api/v1/material', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer ' + token,
+                    'Authorization': 'Bearer ' + KORISNIK_TOKEN,
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify(metapodaci)
@@ -170,23 +184,51 @@
 
     // Učitaj materijale
     async function loadMaterijali() {
-        const token = localStorage.getItem('jwtToken');
-        const res = await fetch('http://localhost:8084/api/v1/material', {
-            headers: {'Authorization': 'Bearer ' + token}
-        });
-        const materijali = await res.json();
-        const container = document.getElementById('materijali');
-        container.innerHTML = materijali.map(m => `
-        <div class="materijal">
-          <h3>${m.naslov}</h3>
-          <p><strong>Tip:</strong> ${m.tipMaterijala}</p>
-          <p><strong>Fajl:</strong> ${m.putanjaFajla}</p>
-          <p><strong>Predmet:</strong> ${m.predmet} | <strong>Razred:</strong> ${m.razred}</p>
-<!--          <a href="http://localhost:8085/api/v1/files/download/${m.putanjaFajla}" target="_blank">Preuzmi</a>-->
-<!-- Umesto: <a href="...">Preuzmi</a> -->
-<button onclick="downloadFile('${m.putanjaFajla}')">Preuzmi</button>
-        </div>
-      `).join('');
+        if (!KORISNIK_TOKEN) {
+            document.getElementById('materijali').innerHTML = '<p>Morate biti ulogovani.</p>';
+            return;
+        }
+
+        try {
+            const res = await fetch('http://localhost:8084/api/v1/material', {
+                headers: {'Authorization': 'Bearer ' + KORISNIK_TOKEN}
+            });
+            const materijali = await res.json();
+
+            const statusStyles = {
+                'na_cekanju': 'color: orange;',
+                'potvrdjen': 'color: green;',
+                'odbijen': 'color: red;'
+            };
+            const statusText = {
+                'na_cekanju': 'Na čekanju',
+                'potvrdjen': 'Odobren',
+                'odbijen': 'Odbijen'
+            };
+
+            const container = document.getElementById('materijali');
+            if (materijali.length === 0) {
+                container.innerHTML = '<p>Nemate uploadovanih materijala.</p>';
+                return;
+            }
+
+            container.innerHTML = materijali.map(m => {
+                return `
+                <div class="materijal status-${m.status}">
+                    <h3>${m.naslov}</h3>
+                    <p><strong>Tip:</strong> ${m.tipMaterijala}</p>
+                    <p><strong>Status:</strong> <span style="${statusStyles[m.status]}">${statusText[m.status]}</span></p>
+                    ${m.status === 'odbijen' ? `<p><strong>Razlog odbijanja:</strong> ${m.napomena || '–'}</p>` : ''}
+                    <p><strong>Fajl:</strong> ${m.putanjaFajla}</p>
+                    <p><strong>Predmet:</strong> ${m.predmet} | <strong>Razred:</strong> ${m.razred}</p>
+                    <button onclick="downloadFile('${m.putanjaFajla}')">Preuzmi</button>
+                </div>
+            `;
+            }).join('');
+        } catch (err) {
+            console.error('Greška pri učitavanju materijala:', err);
+            document.getElementById('materijali').innerHTML = '<p>Greška pri učitavanju.</p>';
+        }
     }
 
     // Logout
@@ -196,12 +238,9 @@
         window.location.href = '../login.html';
     }
 
-    // Inicijalno učitavanje
-    loadMaterijali();
-
+    // Preuzimanje fajla
     async function downloadFile(filename) {
-        const token = localStorage.getItem('jwtToken');
-        if (!token) {
+        if (!KORISNIK_TOKEN) {
             alert('Nisi ulogovan!');
             return;
         }
@@ -210,7 +249,7 @@
             const response = await fetch(`http://localhost:8085/api/v1/files/download/${filename}`, {
                 method: 'GET',
                 headers: {
-                    'Authorization': 'Bearer ' + token
+                    'Authorization': 'Bearer ' + KORISNIK_TOKEN
                 }
             });
 
@@ -232,6 +271,9 @@
             alert('Greška: ' + err.message);
         }
     }
+
+    // Inicijalno učitavanje
+    loadMaterijali();
 </script>
 </body>
 </html>
